[package]
name = "rpromhub"
version = "0.1.0"
authors = ["Melvin Tu <melvinto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.12.0"
tokio = { version = "1.5.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = "0.4.19"
config = "0.11"
futures = "0.3.5"